--- a/src/main/resources/templates/driver_list.html
+++ b/src/main/resources/templates/driver_list.html
@@ -6,10 +6,10 @@
     <title>List of All Drivers</title>
 </head>
 <body>
-<a th:href="@{'/drivers/create'}"> New Car</a>
+<a th:href="@{'/drivers/create'}"> New Driver</a>
     <ul>
-        <li th:each="driver, iter: ${drivers}">
-            <a th:href="@{'/drivers/detail' + ${iter.index}}">
+        <li th:each="driver: ${drivers}">
+            <a th:href="@{'/drivers/detail' + ${driver.id}}">
                 <span th:text="${driver.name}"></span>
                 </a>
         </li>
