--- a/src/main/resources/templates/car_detail.html
+++ b/src/main/resources/templates/car_detail.html
@@ -11,6 +11,7 @@
 <b>Color:</b><span th:text="${car.color}"></span><br>
 <b>Tank Volume:</b><span th:text="${car.tankVolume}"></span><br>
 <b>Number of Seats:</b><span th:text="${car.numberOfSeats}"></span><br>
+<b>Driver:</b><span th:text="${car.driver.name}"></span><br>
 
 </body>
 </html>
