--- a/src/main/resources/templates/driver_edit.html
+++ b/src/main/resources/templates/driver_edit.html
@@ -5,14 +5,15 @@
     <title th:text="${edit ? 'Edit Driver' : 'New Driver'}"></title>
 </head>
 <body>
-    <form th:action="@{'/drivers/save'}" method="post" th:object="${driver}">
-        Name: <input type="text" th:field="*{driver.name}"><br>
-        <span th:if="${#fields.hasErrors('driver.name')}" th:errors="*{driver.name}"></span><br>
-        Age: <input type="text" th:field="*{driver.age}"><br>
-        <span th:if="${#fields.hasErrors('driver.age')}" th:errors="*{driver.age}"></span><br>
-        Salary: <input type="number" th:field="*{driver.salary}"><br>
-        <span th:if="${#fields.hasErrors('driver.salary')}" th:errors="*{driver.salary}"></span><br>
-        <input type="submit" value="Save">
-    </form>
+<form th:action="@{'/drivers/save'}" method="post" th:object="${driver}">
+    <input type="hidden" th:field="*{id}">
+    Name: <input type="text" th:field="*{name}">
+    <span th:if="${#fields.hasErrors('name')}" th:errors="*{name}"></span><br>
+    Age: <input type="text" th:field="*{age}">
+    <span th:if="${#fields.hasErrors('age')}" th:errors="*{age}"></span><br>
+    Salary: <input type="number" th:field="*{salary}">
+    <span th:if="${#fields.hasErrors('salary')}" th:errors="*{salary}"></span><br>
+    <input type="submit" value="Save">
+</form>
 </body>
 </html>
