added Expedition controller, Service and impl, added list of expeditions, detail and creation of new one, partially edit and delete

--- a/src/main/resources/templates/driver_list.html
+++ b/src/main/resources/templates/driver_list.html
@@ -9,7 +9,7 @@
 <a th:href="@{'/drivers/create'}"> New Driver</a>
     <ul>
         <li th:each="driver: ${drivers}">
-            <a th:href="@{'/drivers/detail' + ${driver.id}}">
+            <a th:href="@{'/drivers/detail/' + ${driver.id}}">
                 <span th:text="${driver.name}"></span>
                 </a>
         </li>
