--- a/src/main/resources/templates/index.html
+++ b/src/main/resources/templates/index.html
@@ -7,9 +7,7 @@
 <body>
 <center>
   <h1>PPRO Project</h1>
-  <a th:href="@{'/cars/'}">List of Cars</a>
-  <br><br>
-  <a th:href="@{'/drivers/'}">List of Drivers</a>
+    <a th:href="@{'/expeditions/'}">List of Expeditions</a>
 </center>
 </body>
 </html>
