--- a/src/main/resources/templates/car_detail.html
+++ b/src/main/resources/templates/car_detail.html
@@ -1,7 +1,8 @@
 <!DOCTYPE html>
-<html lang="en">
+<html lang="cz">
 <head>
     <meta charset="UTF-8">
+    <meta name="viewport" content="width=device-width, initial-scale=1">
     <title>Car details</title>
 </head>
 <body>
@@ -11,7 +12,6 @@
 <b>Color:</b><span th:text="${car.color}"></span><br>
 <b>Tank Volume:</b><span th:text="${car.tankVolume}"></span><br>
 <b>Number of Seats:</b><span th:text="${car.numberOfSeats}"></span><br>
-<b>Driver:</b><span th:text="${car.driver.name}"></span><br>
 
 </body>
 </html>
