Meetings implementation, Added Controller, Service, ServiceImpl, html pages and partially implemented create new meeting

--- a/src/main/resources/templates/index.html
+++ b/src/main/resources/templates/index.html
@@ -8,6 +8,8 @@
 <center>
   <h1>PPRO Project</h1>
     <a th:href="@{'/expeditions/'}">List of Expeditions</a>
+    <br>
+    <a th:href="@{'/meetings/'}">List of Meetings</a>
 </center>
 </body>
 </html>
