--- a/src/main/resources/templates/meeting_edit.html
+++ b/src/main/resources/templates/meeting_edit.html
@@ -1,22 +1,35 @@
 <!DOCTYPE html>
-<html lang="cz">
+<html lang="cz" xmlns="http://www.w3.org/1999/html">
 <head>
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1">
-    <title th:text="${edit ? 'Edit Meeting' : 'New Meeting'}"></title>
+    <title th:text="${edit ? 'Skaut | Úpravení Schůzky' : 'Skaut | Nová Schůzka'}"></title>
+    <link th:href="@{/styles/meeting/meetingForm.css}" rel="stylesheet" />
 </head>
 <body>
-<form th:action="@{'/meetings/save'}" method="post" th:object="${meeting}">
-    <input type="hidden" th:field="*{id}">
-    <label>Location: </label>
-    <input type="text" th:field="*{location}">
-    <span th:if="${#fields.hasErrors('location')}" th:errors="*{location}"></span><br>
-    <label for="meeting-date">Date of meeting:</label>
-    <input type="date" th:field="${meeting.date}" id="meeting-date"/>
-    <label for="meeting-time">Time of meeting:</label>
-    <input type="time" th:field="${meeting.time}" id="meeting-time"/>
-    <br><br>
-    <input type="submit" value="Save">
-</form>
+<div class="wrapper">
+    <header>
+        <h1>Vytvoření nové schůzky</h1>
+    </header>
+        <form th:action="@{'/meetings/save'}" method="post" class="meeting-form" th:object="${meeting}">
+            <input type="hidden" th:field="*{id}">
+            <div class="form-group">
+                <label for="location">Lokace</label>
+                <input type="text" th:field="*{location}"  id="location" name="location" required placeholder="Zadejte lokaci" />
+                <span th:if="${#fields.hasErrors('location')}" th:errors="*{location}"></span>
+            </div>
+            <div class="form-group">
+                <label for="date">Datum</label>
+                <input type="date" th:field="${meeting.date}" id="date" name="date" required />
+            </div>
+
+            <div class="form-group">
+                <label for="time">Čas</label>
+                <input type="time" th:field="${meeting.time}" id="time" name="time" required />
+            </div>
+
+            <button type="submit" class="submit-btn" value="Save">Uložit schůzku</button>
+        </form>
+</div>
 </body>
 </html>
