--- a/src/main/resources/templates/expedition_list.html
+++ b/src/main/resources/templates/expedition_list.html
@@ -3,17 +3,23 @@
 <head>
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1">
-    <title>List of All Expeditions</title>
+    <title>Skaut | Výpravy</title>
+    <link th:href="@{/styles/expedition/expedition.css}" rel="stylesheet" />
 </head>
 <body>
-<a th:href="@{'/expeditions/create'}"> New Expedition</a>
-<ul>
-    <li th:each="expedition: ${expeditions}">
-        <a th:href="@{'/expeditions/detail/' + ${expedition.id}}">
-            <span th:text="${expedition.name}"></span>
-            <span th:text="${expedition.description}"></span>
+<div class="wrapper">
+    <header>
+        <h1>Výpravy</h1>
+        <a th:href="@{'/expeditions/create'}" class="add-button">
+            Přidat novou výpravu
         </a>
-    </li>
-</ul>
+    </header>
+    <div class="card-container">
+        <div class="card" th:each="expedition: ${expeditions}">
+            <p class="card-text" th:text="${expedition.name}">Čac začátku</p>
+            <p class="card-text" th:text="${expedition.description}">Lokace</p>
+            <a th:href="@{'/expeditions/detail/' + ${expedition.id}}">Zobrazit detaily</a>
+        </div>
+    </div>
 </body>
 </html>
