--- a/src/main/resources/templates/login.html
+++ b/src/main/resources/templates/login.html
@@ -8,7 +8,7 @@
 
 <h2>Přihlášení</h2>
 
-<form th:action="@{/login}" method="post">
+<form th:action="@{'/perform_login'}" method="post">
     <div>
         <label for="username">Username:</label>
         <input type="text" id="username" name="username" required="required"/>
