registration of new user added, small changes and code cleanup

--- a/src/main/resources/templates/index.html
+++ b/src/main/resources/templates/index.html
@@ -24,7 +24,7 @@
         <div class="card">
             <h3 class="card-title">Uživatelé</h3>
             <p class="card-text">Správa uživatelů a jejich profilů.</p>
-            <a th:href="@{/uzivatele}">Zobrazit</a>
+            <a th:href="@{'/users/'}">Zobrazit</a>
         </div>
     </div>
 </div>
