--- a/src/main/resources/static/styles/register.css
+++ b/src/main/resources/static/styles/register.css
@@ -18,7 +18,7 @@ h1 {
     color: #333;
 }
 
-.login-container {
+.register-container {
     max-width: 1200px;
     margin: 0 auto;
     padding: 20px;
@@ -29,7 +29,7 @@ header {
     margin-bottom: 40px;
 }
 
-.login-form {
+.register-form {
     width: 100%;
     max-width: 600px;
     margin: 0 auto;
@@ -39,7 +39,7 @@ header {
     box-shadow: 0 4px 8px rgba(0, 0, 0, 0.1);
 }
 
-.login-form h2 {
+.register-form h2 {
     text-align: center;
     font-size: 1.5em;
     margin-bottom: 20px;
@@ -69,6 +69,35 @@ header {
 .form-input:focus {
     border-color: #28a745;
     outline: none;
+}
+
+select {
+    width: 100%;
+    padding: 10px;
+    margin-top: 8px;
+    border: 1px solid #ccc;
+    border-radius: 4px;
+    font-size: 16px;
+    background-color: #f9f9f9;
+    transition: background-color 0.3s ease, border-color 0.3s ease;
+}
+
+select:focus {
+    outline: none;
+    border-color: #0056b3;
+    background-color: #eef4ff;
+}
+
+option {
+    padding: 10px;
+    font-size: 16px;
+}
+
+@media (max-width: 600px) {
+    select {
+        width: 100%;
+        padding: 8px;
+    }
 }
 
 .form-button {
