--- a/src/main/resources/templates/register.html
+++ b/src/main/resources/templates/register.html
@@ -2,32 +2,52 @@
 <html>
 <head>
     <meta charset="UTF-8">
+    <meta name="viewport" content="width=device-width, initial-scale=1">
     <title>Skaut | Registrace</title>
+    <link th:href="@{/styles/register.css}" rel="stylesheet" />
 </head>
 <body>
+<div class="register-container">
+    <h1>Registrace</h1>
 
-<h2>Registrace</h2>
+    <form th:action="@{/users/register}" method="post" class="register-form" th:object="${user}">
+        <input type="hidden" th:field="*{id}">
+        <div class="form-group">
+            <label for="username">Username:</label>
+            <input type="text" id="username" name="username" th:field="*{username}" required="required"/>
+            <span th:if="${#fields.hasErrors('username')}" th:errors="*{username}"></span>
+        </div>
 
-<form th:action="@{/register}" method="post">
-    <div>
-        <label for="username">Username:</label>
-        <input type="text" id="username" name="username" required="required"/>
-    </div>
+        <div class="form-group">
+            <label for="password">Heslo:</label>
+            <input type="password" id="password" name="password" th:field="*{password}" required="required"/>
+            <span th:if="${#fields.hasErrors('password')}" th:errors="*{password}"></span>
+        </div>
 
-    <div>
-        <label for="password">Password:</label>
-        <input type="password" id="password" name="password" required="required"/>
-    </div>
+        <div class="form-group">
+            <label for="confirmPassword">Znovu heslo:</label>
+            <input type="password" id="confirmPassword" name="confirmPassword" th:field="*{confirmPassword}" required="required"/>
+            <span th:if="${#fields.hasErrors('confirmPassword')}" th:errors="*{confirmPassword}"></span>
+        </div>
 
-    <div>
-        <label for="confirmPassword">Confirm Password:</label>
-        <input type="password" id="confirmPassword" name="confirmPassword" required="required"/>
-    </div>
+        <div class="form-group">
+            <select th:field="*{roles}">
+                <option th:each="role: ${roles}" th:text="${role.name}" th:value="${role.id}" required="required"></option>
+            </select>
+        </div>
 
-    <div>
-        <button type="submit">Register</button>
-    </div>
-</form>
+        <div class="form-messages">
+            <p th:if="${param.error}" class="error-message">Invalid username or password.</p>
+        </div>
 
+        <div th:if="${not #strings.equals(password, confirmPassword)}">
+            <p style="color: red;">Passwords do not match!</p>
+        </div>
+
+        <div class="form-group">
+            <button class="form-button" type="submit">Registrovat</button>
+        </div>
+    </form>
+</div>
 </body>
 </html>
