--- a/src/main/resources/static/styles/expedition/expeditionDetail.css
+++ b/src/main/resources/static/styles/expedition/expeditionDetail.css
@@ -42,7 +42,7 @@ h1 {
     margin-top: 20px;
 }
 
-.edit-btn, .delete-btn {
+.edit-btn, .delete-btn, .join-btn {
     padding: 12px 20px;
     border-radius: 4px;
     font-size: 1.1em;
@@ -68,4 +68,12 @@ h1 {
 
 .delete-btn:hover {
     background-color: #c82333;
+}
+.join-btn {
+    background-color: #007bff;
+    color: white;
+}
+
+.join-btn:hover {
+    background-color: #0056b3;
 }
