--- a/src/main/resources/templates/expedition_detail.html
+++ b/src/main/resources/templates/expedition_detail.html
@@ -16,8 +16,15 @@
             <div class="expedition-details">
                 <p><strong>Název:</strong> <span th:text="${expedition.name}">Název výpravy</span></p>
                 <p><strong>Popis:</strong> <span th:text="${expedition.description}">Popis výpravy</span></p>
+                <h2>Účastníci:</h2>
+                <ul>
+                    <li th:each="user : ${expedition.users}" th:text="${user.username}">Uživatel</li>
+                </ul>
             </div>
             <div class="button-group">
+                <form th:action="@{/expeditions/{id}/join(id=${expedition.id})}" method="post">
+                    <button class="join-btn" type="submit">Přihlásit se</button>
+                </form>
                 <a href="#" th:href="@{'/expeditions/edit/' + ${expedition.id}}" class="edit-btn">Upravit výpravu</a>
                 <a href="#" th:href="@{'/expeditions/delete/' + ${expedition.id}}" class="delete-btn" onclick="return confirm('Opravdu chcete smazat tuto schůzku?');">Smazat výpravu</a>
             </div>
