--- a/src/main/resources/templates/expedition_detail.html
+++ b/src/main/resources/templates/expedition_detail.html
@@ -5,8 +5,10 @@
     <meta name="viewport" content="width=device-width, initial-scale=1">
     <title>Skaut | Detail Výpravy</title>
     <link th:href="@{/styles/expedition/expeditionDetail.css}" rel="stylesheet" />
+    <link th:href="@{/styles/fragment.css}" rel="stylesheet" />
 </head>
 <body>
+<div th:replace="fragments :: navigation"></div>
     <div class="wrapper">
         <header>
             <h1>Detail Výpravy</h1>
