--- a/src/main/resources/templates/expedition_edit.html
+++ b/src/main/resources/templates/expedition_edit.html
@@ -5,8 +5,10 @@
     <meta name="viewport" content="width=device-width, initial-scale=1">
     <title th:text="${edit ? 'Skaut | Úpravení Výpravy' : 'Skaut | Nová Výprava'}"></title>
     <link th:href="@{/styles/expedition/expeditionForm.css}" rel="stylesheet" />
+    <link th:href="@{/styles/fragment.css}" rel="stylesheet" />
 </head>
 <body>
+<div th:replace="fragments :: navigation"></div>
 <div class="wrapper">
     <header>
         <h1>Vytvoření nové výpravy</h1>
