--- a/src/main/resources/templates/meeting_list.html
+++ b/src/main/resources/templates/meeting_list.html
@@ -5,8 +5,10 @@
     <meta name="viewport" content="width=device-width, initial-scale=1">
     <title>Skaut | Schůzky</title>
     <link th:href="@{/styles/meeting/meeting.css}" rel="stylesheet" />
+    <link th:href="@{/styles/fragment.css}" rel="stylesheet" />
 </head>
 <body>
+<div th:replace="fragments :: navigation"></div>
     <div class="wrapper">
         <header>
             <h1>Schůzky</h1>
