--- a/src/main/resources/templates/register.html
+++ b/src/main/resources/templates/register.html
@@ -5,8 +5,10 @@
     <meta name="viewport" content="width=device-width, initial-scale=1">
     <title>Skaut | Registrace</title>
     <link th:href="@{/styles/register.css}" rel="stylesheet" />
+    <link th:href="@{/styles/fragment.css}" rel="stylesheet" />
 </head>
 <body>
+<div th:replace="fragments :: navigation"></div>
 <div class="register-container">
     <h1>Registrace</h1>
 
