Access-denied added, Roles fix, Authentization fix

--- a/src/main/resources/templates/access-denied.html
+++ b/src/main/resources/templates/access-denied.html
@@ -1,14 +1,18 @@
 <!DOCTYPE html>
-<html>
+<html lang="cs">
 <head>
     <meta charset="UTF-8">
+    <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <title>Skaut | Přístup odepřen</title>
+    <link rel="stylesheet" href="/styles/access-denied.css">
 </head>
 <body>
 
-<h2>Přístup odepřen</h2>
-<p>K této stránce nemáš přístup!!!</p>
-<a href="/login">Přejdi na přihlášní!</a>
+<div class="container">
+    <h2>Přístup odepřen</h2>
+    <p>K této stránce nemáš přístup!!!</p>
+    <a href="/login">Přejdi na přihlášení!</a>
+</div>
 
 </body>
 </html>
